Replaced the math library with atoll.js.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "microtime": "~0.3.3",
-    "async": "~0.1.22"
+    "async": "~0.1.22",
+    "atoll": "git://github.com/mcollina/atoll.js.git"
   }
 }
