--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "sinon-chai": "~2.4.0",
     "sinon": "~1.7.3",
     "chai": "~1.8.1",
-    "mocha": "~1.15.1"
+    "mocha": "^2.1.0"
   },
   "dependencies": {
-    "microtime": "~0.5.0",
+    "microtime": "~1.2.0",
     "atoll": "~0.7.3",
-    "async": "~0.2.9"
+    "async": "~0.9.0"
   }
 }
