--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sinon-chai": "~2.4.0",
     "sinon": "~1.7.3",
     "chai": "~1.8.1",
-    "mocha": "^2.1.0"
+    "mocha": "~2.1.0"
   },
   "dependencies": {
     "microtime": "~1.2.0",
