--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "mocha": "~2.1.0"
   },
   "dependencies": {
-    "microtime": "~1.2.0",
+    "microtime": "~1.4.2",
     "atoll": "~0.7.3",
     "async": "~0.9.0"
+  },
+  "optionalDependencies": {
+    "nan": "~1.8.4"
   }
 }
