--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The benchmark framework designed for node.js callbacks.",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha --recursive test"
   },
   "repository": {
     "type": "git",
