--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
   - 0.8
-  - "0.10"
-  - "0.12"
-  - "iojs-1"
-  - "iojs-2"
+  - 0.10
+  - 0.12
+  - iojs-v1
+  - iojs-v2
+  - iojs-v3
