--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: node_js
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
 node_js:
-  - 0.8
-  - 0.10
-  - 0.12
-  - iojs-v1
-  - iojs-v2
-  - iojs-v3
+  - "0.8"
+  - "0.10"
+  - "0.12"
+  - "iojs-1"
+  - "iojs-2"
+  - "iojs-3"
+before_install:
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - g++ -v
